	by using $@.
	(CygbuildPatchApplyMaybe): Improved patch/unpatch and error
	checking in case the commands were called multiple times.
	Show the full patch command only if --verbose is set.
	(CygbuildCmdInstallCheckDirStructure): Changer ERROR
	to WARN if /bin was found.
	(CygbuildInstallExtraManual): The *.N.pod pages are converted
	into *.N. Delete these generated pages after the install.

2007-09-13  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	- Added new option --bzip2 to choose *.bz2 compression.
	(CygbuildDefineGlobalCommands): GZIP
	incorrectly defined as 'bzip'. New variable BZIP.
	(CygbuildCompress): New. Support both gzip and bzip2.
	(CygbuildInstallExtraManualCompress): Call `CygbuildCompress'
	(CygbuildProgramVersion): New.
	(CygbuildCommandMain): Added getop handling for --bzip2 and
	treatment in while loop to set OPTION_BZIP. Removed
	options -V|--version that are already handled in
	`CygbuildCommandMainCheckHelp'. Call `CygbuildProgramVersion'.
	Don't call `CygbuildReadmeReleaseMatchCheck' when GBS mode
	in on (when running the *.sh source script).
	(CygbuildGPGverify): Added missing backslash from comand
	continuation at gpg --verify. The log file appeared empty and caused
	message 'FAILED! Signature not published'.

2007-09-11  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl (Version): Support exotic version number like
	foo-R31b.tar.gz

	* bin/cygbuild.sh
	- Fix "perl: warning: Setting locale failed" by defininf LC_ALL=C
	  in suitable places.
	(CygbuildMakefileRunInstallPythonMain): Set
	prefix to /usr, not /usr/share. Rewrote input argument
	handling to use shift and $@.
	(CygbuildCmdInstallCheckDirStructure): Warn about deprecated
	X11R6 directory.
	(CygbuildVersionInfo): Support exotic version number like
	foo-R31b.tar.gz
	(CygbuildBootVariablesGlobalEtcMain): Check GBS compat and do
	not require ETC to be installed.
	(CygbuildCmdInstallCheckDirEmpty): New.
	(CygbuildVersionInfo): Greatly simplified the version explode